# surreal-queue-bench

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: architecture.html
src/: html_report.rs  main.rs
