[package]
name = "surreal-queue-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = "3.0.5"
surrealdb-types = "3.0.5"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = { version = "1.23.1", features = ["v4"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
